# wakeword-lab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  train_voice.py  ui_app.py
